--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>Title</title>
+        <title>Odin Recipes</title>
     </head>
     <body>
         <h1>Odin Recipes</h1>
