Add style for chicken

--- a/recipes/chiken.html
+++ b/recipes/chiken.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="../css/chiken.css">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>Chiken</title>
@@ -10,6 +11,14 @@
         <img src="https://www.allrecipes.com/thmb/gYsrGM14RYokImKvPiUXePc3JMU=/800x533/filters:no_upscale():max_bytes(150000):strip_icc():focal(399x0:401x2):format(webp)/6827213_VietnameseGrilledLemongrassChicken4x3-8ff426f2b079405a9c0b6f8d3dcd6c2e.jpg" alt="image of a chiken">
             <h2>Description</h2>
         <p>The World's Favorite Grilled Chiken Recipes</p>
+
+        <div id="title">
+            My Awesome 90's Page
+        </div>
+
+        <div class="alert-text">
+            Please agree to our terms of service.
+        </div>
 
         <h3>Ingredients</h3>
         <ul>
